# OrderService

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cred.json  dist.env  docker-compose.app.yaml  docker-compose.base.yaml  docker-compose.yaml  pyproject.toml  script.Dockerfile
backend/: .dockerignore  app.dockerfile  backend.Dockerfile  pyproject.toml  script.Dockerfile  script.dockerfile  server.dockerfile
backend/app/: alembic.ini
backend/app/app/: config_reader.py  logger.py  main.py  script.py  utils.py
backend/app/app/exceptions/: rate_except.py
backend/app/app/infrastructure/db/: __init__.py  factory.py  models.py
backend/app/app/infrastructure/repo/: __init__.py  orders.py
backend/app/app/infrastructure/repo/base/: repository.py
backend/app/app/infrastructure/workflow/: celery.py  database_task.py
backend/app/app/infrastructure/workflow/tasks/: check_delivery_task.py  periodic.py  script_task.py
backend/app/app/infrastucture/db/: factory.py  models.py
backend/app/app/infrastucture/repo/: orders.py
backend/app/app/infrastucture/repo/base/: repository.py
backend/app/app/infrastucture/workflow/: celery.py
backend/app/app/infrastucture/workflow/tasks/: periodic.py  script_task.py
backend/app/app/server/: main.py  routes.py
backend/app/app/server/middlewares/: __init__.py  repository.py  repositorymiddleware.py
backend/app/app/services/: core.py  current_rate.py  google_api.py  schemas.py  telegram_api.py  tg_bot.py
backend/app/app/services/ext_api/: __init__.py  cbr_api.py  google_api.py  tg_bot.py
backend/app/app/templates/: order_expire.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 1_initial.py
backend/postgres/: postgresql.conf
frontend/app/: .dockerignore  .gitignore  frontend.Dockerfile  frontend.dockerfile  package-lock.json  package.json
frontend/app/public/: index.html
migrations/: env.py
migrations/versions/: 1_initial.py  2_order_number_unique.py  3_order_number_biginteger.py
src/: config_reader.py  logger.py  utils.py
src/app/: main.py
src/script/: main.py  schemas.py
(+21 files in other folders)
