[tool.poetry]
name = "price-service"
version = "0.1.0"
description = ""
authors = ["AgafonovSiberia <agafonov@chita.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.2"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
sqlalchemy = "^2.0.7"
gspread = "^5.7.2"
psycopg = "^3.1.8"
psycopg-binary = "^3.1.8"
flask = "^2.2.3"
celery = "^5.2.7"
flower = "^1.2.0"
flask-cors = "^3.0.10"
redis = "^4.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.257"
pyright = "^1.1.299"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '.*/migrations/.*'

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
